# test-dds

./: CMakeLists.txt  DEFAULT_FASTRTPS_PROFILES.xml  README.md  dds_sdk.idl  main.cpp  sdk_profile.xml
cxxclient/: dds_sdk.cxx  dds_sdk.h  dds_sdkCdrAux.hpp  dds_sdkCdrAux.ipp  dds_sdkPubSubTypes.cxx  dds_sdkPubSubTypes.h
